<resources>
    <string name="app_name">FarmersNet</string>
    <string name="username">Username</string>
    <string name="fname">First Name</string>
    <string name="lname">Last Name</string>
    <string name="title">Title</string>
    <string name="addimage">Add Image</string>
    <string name="article">Article</string>
    <string name="post">Post</string>
    <string name="create_post">Create Post</string>
    <string name="settings">Settings</string>
    <string name="logout">Logout</string>
    <string name="time">time</string>
    <string name="like">Like</string>
    <string name="comment">Comments</string>
    <string name="advise">Advise</string>
    <string name="share">Share</string>
    <string name="home">Home</string>
    <string name="chartroom">Chart Room</string>
    <string name="account">Account</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="personalInfor">Personal Information</string>
    <string name="locatedin">Located In:</string>
    <string name="location">location</string>
    <string name="dateofbirth">Date Of Birth</string>
    <string name="date">Date</string>
    <string name="about">About</string>
    <string name="contactinfor">Contact Info</string>
    <string name="email">Email</string>
    <string name="phoneNumber">Phone Number</string>
    <string name="interests">Interests</string>
    <string name="number">+256</string>
    <string name="register">Register</string>
    <string name="uploadImage">Upload Profile Image</string>
    <string name="chartroom_title">Chartroom Title</string>
    <string name="discription">Discription</string>
    <string name="enter_room_name">Enter chat room name</string>
    <string name="enter_description">Add Description</string>
    <string name="create">Create</string>
    <string name="add_people">Add people</string>
    <string name="create_chatroom">Create Chat Room</string>
    <string name="members">Members</string>
    <string name="chat_description">Chat Description</string>
    <string name="chat_room">Chat Room</string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Enim ex ipsum maxime quos. Blanditiis, dolores ea enim exercitationem expedita explicabo harum itaque iure modi, neque nobis odit officiis quibusdam similique.</string>
    <string name="add_comment">Add a Comment...</string>
    <string name="searchUsers">Search Users</string>
    <string name="following">Following</string>
    <string name="follow">Follow</string>
</resources>
