<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:icon="@drawable/ic_outline_home_24px"
        android:title="@string/home"
        android:id="@+id/frag_item_home"
        app:showAsAction="always|withText" />
    <item
        android:icon="@drawable/ic_chart_group_icon_24px"
        android:title="@string/chartroom"
        android:id="@+id/frag_item_chartRoom"
        app:showAsAction="always|withText" />
    <item
        android:icon="@drawable/ic_outline_person_outline_24px"
        android:title="@string/account"
        android:id="@+id/frag_item_account"
        app:showAsAction="always|withText" />
    <item
        android:icon="@drawable/ic_outline_add_circle_outline_24px"
        android:title="@string/create_post"
        android:id="@+id/frag_item_createPost"
        app:showAsAction="always" />
</menu>