<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/search_user_image"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:src="@drawable/farm_logo"/>

        <TextView
            android:id="@+id/search_username_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginStart="15dp"
            android:layout_marginTop="12dp"
            android:layout_toEndOf="@+id/search_user_image"
            android:text="@string/username"
            android:textColor="@color/colorPrimary" />

        <TextView
            android:id="@+id/search_email"
            android:layout_width="240dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/search_username_textView"
            android:layout_marginStart="16dp"
            android:layout_marginTop="9dp"
            android:layout_marginEnd="9dp"
            android:layout_marginBottom="12dp"
            android:layout_toStartOf="@+id/list_follow_btn"
            android:layout_toEndOf="@+id/search_user_image"
            android:text="@string/email"
            android:textColor="@color/colorBlack" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@+id/search_email"
            android:layout_marginStart="0dp"
            android:layout_marginTop="2dp"
            android:layout_marginBottom="2dp"
            android:background="@color/colorgreydark"
            android:textColor="@color/colorBlack" />

        <Button
            android:id="@+id/list_follow_btn"
            android:layout_width="70dp"
            android:layout_height="26dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="34dp"
            android:layout_marginEnd="10dp"
            android:background="@color/colorPrimary"
            android:text="@string/follow"
            android:textColor="@color/colorWhite"
            android:textSize="12dp" />

        <TextView
            android:id="@+id/list_following_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="36dp"
            android:layout_marginEnd="11dp"
            android:text="@string/following"
            android:textColor="@color/colorPrimary" />


    </RelativeLayout>

</FrameLayout>