<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView6"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:cardCornerRadius="1dp"
        app:cardElevation="3dp"
        app:cardUseCompatPadding="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/post_rec_imageView"
                android:layout_width="0dp"
                android:layout_height="150dp"
                android:layout_marginTop="8dp"
                android:scaleType="centerCrop"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/post_rec_title_textView"
                app:srcCompat="@drawable/rectangle" />

            <ImageView
                android:id="@+id/post_rec_like_icon"
                android:layout_width="0dp"
                android:layout_height="30dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                app:layout_constraintEnd_toStartOf="@+id/post_rec_comment_icon"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/post_rec_article_textView"
                app:srcCompat="@mipmap/ic_like_dark_icon" />

            <ImageView
                android:id="@+id/post_rec_comment_icon"
                android:layout_width="0dp"
                android:layout_height="30dp"
                android:layout_marginTop="8dp"
                app:layout_constraintEnd_toStartOf="@+id/post_rec_advise_icon"
                app:layout_constraintStart_toEndOf="@+id/post_rec_like_icon"
                app:layout_constraintTop_toBottomOf="@+id/post_rec_article_textView"
                app:srcCompat="@mipmap/ic_comment_icon" />

            <ImageView
                android:id="@+id/post_rec_share_icon"
                android:layout_width="0dp"
                android:layout_height="30dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/post_rec_advise_icon"
                app:layout_constraintTop_toBottomOf="@+id/post_rec_article_textView"
                app:srcCompat="@mipmap/ic_share_icon" />

            <ImageView
                android:id="@+id/post_rec_advise_icon"
                android:layout_width="0dp"
                android:layout_height="30dp"
                android:layout_marginTop="8dp"
                app:layout_constraintEnd_toStartOf="@+id/post_rec_share_icon"
                app:layout_constraintStart_toEndOf="@+id/post_rec_comment_icon"
                app:layout_constraintTop_toBottomOf="@+id/post_rec_article_textView"
                app:srcCompat="@drawable/ic_outline_school_24px" />

            <TextView
                android:id="@+id/post_rec_username_textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="12dp"
                android:hint="@string/username"
                android:textSize="14sp"
                app:layout_constraintStart_toEndOf="@+id/post_rec_userimageView"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/post_rec_title_textView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:text="@string/title"
                android:textSize="14sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/post_rec_userimageView"
                app:layout_constraintTop_toBottomOf="@+id/post_rec_username_textView" />

            <TextView
                android:id="@+id/post_rec_time_textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:text="@string/time"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/post_rec_article_textView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:background="@drawable/input_area"
                android:text="@string/article"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/post_rec_imageView" />

            <TextView
                android:id="@+id/post_rec_like_textView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="@string/like"
                android:textAlignment="center"
                app:layout_constraintEnd_toStartOf="@+id/post_rec_comment_textView"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/post_rec_like_icon" />

            <TextView
                android:id="@+id/post_rec_comment_textView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/comment"
                android:textAlignment="center"
                app:layout_constraintEnd_toStartOf="@+id/post_rec_advise_textView"
                app:layout_constraintStart_toEndOf="@+id/post_rec_like_textView"
                app:layout_constraintTop_toBottomOf="@+id/post_rec_comment_icon" />

            <TextView
                android:id="@+id/post_rec_share_textView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:text="@string/share"
                android:textAlignment="center"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/post_rec_advise_textView"
                app:layout_constraintTop_toBottomOf="@+id/post_rec_share_icon" />

            <TextView
                android:id="@+id/post_rec_advise_textView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/advise"
                android:textAlignment="center"
                app:layout_constraintEnd_toStartOf="@+id/post_rec_share_textView"
                app:layout_constraintStart_toEndOf="@+id/post_rec_comment_textView"
                app:layout_constraintTop_toBottomOf="@+id/post_rec_advise_icon" />

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/post_rec_userimageView"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="4dp"
                android:src="@drawable/ellipse"
                app:civ_border_color="@color/colorWhite"
                app:civ_border_width="1dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>